[package]
name = "rusted_vulkans_sys"
version = "0.1.0"
authors = ["Jerome Stepp <exohuman@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[build-dependencies]
bindgen = "*"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt", "commdlg", "minwindef"] }
