[package]
name = "windower"
version = "0.1.0"
authors = ["Jerome Stepp <exohuman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[target.'cfg(unix)'.dependencies]
xcb = "0.8"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"
